--- a/report_template.html
+++ b/report_template.html
@@ -215,6 +215,9 @@
 
 <body>
   <div class="container">
+  <div style="display: flex; align-items: center; gap: 20px;">
+  <img src="logo.png" alt="Organization Logo" style="height: 60px; border-radius: 8px;">
+</div>
     <h1>{{ org_name }} – Shadowserver Report</h1>
     <div class="info">
       <p><strong>Reference:</strong> {{ reference_number }}</p>
